--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 <body>
   <div id="app">
-    <!-- Loading Screen -->
     <div id="loadingScreen">
       <div class="loader-logo">LinguaLens</div>
       <div class="loader-sub">AR Language Learning</div>
@@ -32,22 +31,20 @@
         <div class="loader-bar-fill" id="loadBar"></div>
       </div>
       <div class="loader-status" id="loadStatus">Initializing…</div>
+      <div class="loader-nametag">Developed by Rushan Haque</div>
     </div>
 
-    <!-- No Camera Fallback -->
     <div id="noCameraMsg">
       <h2>📷 Camera Required</h2>
       <p>LinguaLens needs access to your webcam to identify objects. Please allow camera access and refresh.</p>
       <button class="btn" onclick="location.reload()">🔄 Retry</button>
     </div>
 
-    <!-- Video + AR Overlays -->
     <div id="videoWrap">
       <video id="webcam" autoplay playsinline muted></video>
       <canvas id="overlay"></canvas>
       <div id="labelContainer"></div>
 
-      <!-- Header -->
       <div id="header">
         <div class="logo">Lingua<span>Lens</span></div>
         <div class="header-actions">
@@ -66,10 +63,8 @@
       </div>
     </div>
 
-    <!-- Static Detected Objects Bar -->
     <div id="detectedBar"></div>
 
-    <!-- Stats + Developer Credit -->
     <div id="statsStrip">
       <div class="stat"><span class="stat-value" id="statObjects">0</span><span class="stat-label">Discovered</span>
       </div>
@@ -77,13 +72,12 @@
       </div>
       <div class="stat"><span class="stat-value" id="statQuizScore">—</span><span class="stat-label">Quiz</span></div>
       <div class="stat"><span class="stat-value" id="statFPS">0</span><span class="stat-label">FPS</span></div>
-      <div class="credit-badge">
+      <a href="https://www.rushaanhaque.online" target="_blank" class="credit-badge" title="Visit Developer Website">
         <div class="credit-dot"></div>
         <div class="credit-name">Developed by Rushan Haque</div>
-      </div>
+      </a>
     </div>
 
-    <!-- Side Panel -->
     <div id="sidePanel">
       <div class="panel-header">
         <div class="panel-title" id="panelTitle">Vocabulary</div>
@@ -92,7 +86,6 @@
       <div class="panel-body" id="panelBody"></div>
     </div>
 
-    <!-- Toast -->
     <div class="toast" id="toast"></div>
   </div>
 
