--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="stat"><span class="stat-value" id="statQuizScore">—</span><span class="stat-label">Quiz</span></div>
       <div class="stat"><span class="stat-value" id="statFPS">0</span><span class="stat-label">FPS</span></div>
-      <a href="https://www.rushaanhaque.online" target="_blank" class="credit-badge" title="Visit Developer Website">
+      <a href="https://www.rushanhaque.online" target="_blank" class="credit-badge" title="Visit Developer Website">
         <div class="credit-dot"></div>
         <div class="credit-name">Developed by Rushan Haque</div>
       </a>
