Redesigned snapshot button as camera shutter and fixed nametag/stats strip layout

--- a/index.html
+++ b/index.html
@@ -56,10 +56,16 @@
             <option value="it">🇮🇹 Italian</option>
           </select>
           <button class="btn" id="btnQuiz" title="Quiz Mode (Q)">🎯 Quiz</button>
-          <button class="btn" id="btnSnapshot" title="Snapshot (S)">📸</button>
           <button class="btn" id="btnVocab" title="Vocabulary (V)">📚</button>
           <button class="btn" id="btnSettings" title="Settings">⚙️</button>
         </div>
+      </div>
+
+      <!-- Camera Shutter Button -->
+      <div id="controls">
+        <button id="btnSnapshot" class="shutter-btn" title="Capture Snapshot (S)">
+          <div class="shutter-inner"></div>
+        </button>
       </div>
     </div>
 
